# c-executor

./: .gitignore  CMakeLists.txt  Readme.md
environments/: bash-base.json  cpp.json  go-base.json  node-base.json  node-fullstack.json  python-agent.json  python-base.json  python-ml.json
environments/test/cpp/: main.cpp
include/: common.h  environment.h  io.h  logger.h  sandbox.h  tracer.h
src/: engine.cpp  environment.cpp  io.cpp  main.cpp  sandbox.cpp  tracer.cpp  worker.cpp
